--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Hadiah Untuk Ummi",
-  "short_name": "BukuPWA",
+  "short_name": "HUM PWA",
   "start_url": "index.html",
   "display": "standalone",
   "background_color": "#ffffff",
